fix(key-terms): Make content for key term wrap vertically for mobile view.

--- a/keyterms/static/css/collapse.css
+++ b/keyterms/static/css/collapse.css
@@ -98,6 +98,14 @@ hr {
     -ms-flex: 1;
     flex: 1;
 }
+@media only screen and (max-width: 600px) {
+    .collapsible-box {
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+    }
+}
 
 .collapse {
     display: none;
